--- a/app/views/books/_form.html.slim
+++ b/app/views/books/_form.html.slim
@@ -11,6 +11,12 @@
 
   = f.text_field :name, class: 'text-input', placeholder: 'Name'
   
+  = f.text_field :author, class: 'text-input', placeholder: 'Author'
+  
+  = f.text_field :publisher, class: 'text-input', placeholder: 'Publisher'
+  
+  = f.text_field :year, class: 'text-input', placeholder: 'Year'
+  
   = f.text_field :pages_read, class: 'text-input'
   
   = f.text_field :total_pages, class: 'text-input'
