--- a/app/assets/stylesheets/blog/book/book__name/book__name.sass
+++ b/app/assets/stylesheets/blog/book/book__name/book__name.sass
@@ -2,3 +2,6 @@
   font-size: 20px
   color: $title-color
   text-decoration: none
+  text-overflow: ellipsis
+  overflow: hidden
+  white-space: nowrap 
