--- a/app/assets/stylesheets/about.sass
+++ b/app/assets/stylesheets/about.sass
@@ -28,39 +28,37 @@ $contacts-color: #B71C1C
 .contacts
   background-color: $contacts-color
 
-body
-  margin: 0
-  padding: 0
-  color: $text-color
-  font-size: 30px
-  background-color: black
-  font-family: 'PT Sans', sans-serif
-
-ul.navigation
+.fixed-navigation
   margin: 0
   padding: 0
   list-style: none
-  color: white
+  color: grey
   display: flex
-  text-align: center
-  height: 10vh
-  max-height: 60px
+  flex-direction: column
+  position: fixed
+  left: 2vw
+  top: 15vh
 
-  li
-    cursor: pointer
-    width: 15%
-    margin-left: auto
-    margin-right: auto
-    line-height: 95px
-
-    &:hover
-      filter: brightness(120%)
+  // li
+  //   cursor: pointer
+  //   width: 15%
+  //   margin-left: auto
+  //   margin-right: auto
+  //   line-height: 95px
+  //
+  //   &:hover
+  //     filter: brightness(120%)
 
 .tab
   padding-top: 10px
   padding-left: 20px
   padding-right: 20px
   min-height: 90vh
+  color: white
+
+.tab__content
+  width: 80vw
+  margin: 0 auto
 
 .text-wrapper
   text-align: justify
@@ -68,10 +66,33 @@ ul.navigation
   margin-right: auto
   max-width: 700px
 
-h2
-  font-size: 48px
-  letter-spacing: 7px
+.interests
+  display: flex
+  justify-content: space-around
+  flex-direction: row
+  flex-wrap: wrap
+  margin-bottom: 15px
+
+.interests img
+  position: relative
+  padding: 5px
+  box-shadow: 0 0 10px rgba(0,0,0,0.5)
+
+  &:hover
+    box-shadow: 0 0 10px white
+
+.interest-tip
   text-align: center
-  padding: 0
-  margin: 0
-  text-transform: uppercase
+  position: relative
+  margin-bottom: -40px
+  word-wrap: break-word
+  vertical-align: middle
+  display: none
+
+.interest:hover .interest-tip
+  display: block
+  width: 74px
+  top: -40px
+  left: 0
+  height: 40px
+  background-color: rgba(0,0,0,0.8)
