Fixing about page, replace inline icons

--- a/app/assets/stylesheets/about.sass
+++ b/app/assets/stylesheets/about.sass
@@ -96,3 +96,17 @@ $contacts-color: #B71C1C
   left: 0
   height: 40px
   background-color: rgba(0,0,0,0.8)
+
+.skills-list
+  display: flex
+  justify-content: space-around
+
+  img
+    background-color: white
+
+  figcaption
+    text-align: center
+
+progress
+  display: block
+  width: inherit
