Refactor About styles, recompile assets

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,4 +1,5 @@
 @import 'blog/variables'
 @import 'blog/**/*'
 @import 'atom-one-dark.css'
-@import 'about.css'
+@import 'about/variables'
+@import 'about/**/*'
