--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -25,57 +25,20 @@ nav
       = t('.about_content.me')
     p
       = t('.about_content.interests')
-    
+
     .interests
-      .interest
-        = image_tag("interests/it.png", alt: t('.about_content.interests_list.it'))
-        .interest-tip
-          = t('.about_content.interests_list.it')
-      .interest
-        = image_tag("interests/sciences.png", alt: t('.about_content.interests_list.sciences'), class: 'interest')
-        .interest-tip
-          = t('.about_content.interests_list.sciences')
-      .interest
-        = image_tag("interests/foreign_languages.png", alt: t('.about_content.interests_list.foreign_languages'), class: 'interest')
-        .interest-tip
-          = t('.about_content.interests_list.foreign_languages')
-      .interest
-        = image_tag("interests/literature.png", alt: t('.about_content.interests_list.literature'), class: 'interest')
-        .interest-tip = t('.about_content.interests_list.literature')
-        
-    .interests
-      .interest
-        = image_tag("interests/yoga.png", alt: t('.about_content.interests_list.yoga'))
-        .interest-tip
-          = t('.about_content.interests_list.yoga')
-      .interest
-        = image_tag("interests/sports.png", alt: t('.about_content.interests_list.sports'), class: 'interest')
-        .interest-tip
-          = t('.about_content.interests_list.sports')
-      .interest
-        = image_tag("interests/games.png", alt: t('.about_content.interests_list.games'), class: 'interest')
-        .interest-tip
-          = t('.about_content.interests_list.games')
-      .interest
-        = image_tag("interests/socionics.png", alt: t('.about_content.interests_list.socionics'), class: 'interest')
-        .interest-tip = t('.about_content.interests_list.socionics')
-        
-    .interests
-      .interest
-        = image_tag("interests/ai.png", alt: t('.about_content.interests_list.ai'))
-        .interest-tip
-          = t('.about_content.interests_list.ai')
-      .interest
-        = image_tag("interests/music.png", alt: t('.about_content.interests_list.music'), class: 'interest')
-        .interest-tip
-          = t('.about_content.interests_list.music')
-      .interest
-        = image_tag("interests/engineering.png", alt: t('.about_content.interests_list.engineering'), class: 'interest')
-        .interest-tip
-          = t('.about_content.interests_list.engineering')
-      .interest
-        = image_tag("interests/comics.png", alt: t('.about_content.interests_list.comics'), class: 'interest')
-        .interest-tip = t('.about_content.interests_list.comics')
+      = image_tag("interests/it.png", alt: t('.about_content.interests_list.it'), class: "interests__image")
+      = image_tag("interests/sciences.png", alt: t('.about_content.interests_list.sciences'), class: "interests__image")
+      = image_tag("interests/foreign_languages.png", alt: t('.about_content.interests_list.foreign_languages'), class: "interests__image")
+      = image_tag("interests/literature.png", alt: t('.about_content.interests_list.literature'), class: "interests__image")
+      = image_tag("interests/yoga.png", alt: t('.about_content.interests_list.yoga'), class: "interests__image")
+      = image_tag("interests/sports.png", alt: t('.about_content.interests_list.sports'), class: "interests__image")
+      = image_tag("interests/games.png", alt: t('.about_content.interests_list.games'), class: "interests__image")
+      = image_tag("interests/socionics.png", alt: t('.about_content.interests_list.socionics'), class: "interests__image")
+      = image_tag("interests/ai.png", alt: t('.about_content.interests_list.ai'), class: "interests__image")
+      = image_tag("interests/music.png", alt: t('.about_content.interests_list.music'), class: "interests__image")
+      = image_tag("interests/engineering.png", alt: t('.about_content.interests_list.engineering'), class: "interests__image")
+      = image_tag("interests/comics.png", alt: t('.about_content.interests_list.comics'), class: "interests__image")
 
 .tab.science
   .tab__content
