--- a/app/assets/stylesheets/about/interests/interests.sass
+++ b/app/assets/stylesheets/about/interests/interests.sass
@@ -1,9 +1,8 @@
 .interests
   display: flex
-  justify-content: flex-start
+  justify-content: center
   align-content: center
   padding: 1vw
-  border: 1px solid white
-  width: 50vw
-  margin: 1vw auto
+  width: 80vw
   overflow: hidden
+  flex-wrap: wrap
