--- a/app/assets/stylesheets/about/tab/tab.sass
+++ b/app/assets/stylesheets/about/tab/tab.sass
@@ -2,6 +2,7 @@
   padding-top: 10px
   padding-left: 20px
   padding-right: 20px
+  padding: 10px 20px
   margin-bottom: 5vh
   min-height: 90vh
   color: white
