Add hover highlight for fixed nav icons

--- a/app/assets/stylesheets/about/fixed-navigation/fixed-navigation__icon/fixed-navigation__icon.sass
+++ b/app/assets/stylesheets/about/fixed-navigation/fixed-navigation__icon/fixed-navigation__icon.sass
@@ -1,10 +1,11 @@
+.fixed-navigation__icon:hover
+  filter: drop-shadow(1px 1px 5px white)
+
 .fixed-navigation__author-icon:hover
   fill: $about-color
-  filter: drop-shadow(1px 1px 5px white)
 
 .fixed-navigation__science-icon:hover
   fill: $science-color
-  filter: drop-shadow(1px 1px 5px white)
 
 .fixed-navigation__literature-icon:hover
   fill: $literature-color
