--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -3,17 +3,17 @@ nav
     li
       = link_to inline_svg('author.svg', class: 'fixed-navigation__icon fixed-navigation__author-icon'),'#author'
     li
-      = link_to inline_svg('science.svg', class: 'fixed-navigation__science-icon'), '#science'
+      = link_to inline_svg('science.svg', class: 'fixed-navigation__icon fixed-navigation__science-icon'), '#science'
     li
-      = link_to inline_svg('literature.svg', class: 'fixed-navigation__literature-icon'), '#literature'
+      = link_to inline_svg('literature.svg', class: 'fixed-navigation__icon fixed-navigation__literature-icon'), '#literature'
     li
-      = link_to inline_svg('skills.svg', class: 'fixed-navigation__skills-icon'), '#skills'
+      = link_to inline_svg('skills.svg', class: 'fixed-navigation__icon fixed-navigation__skills-icon'), '#skills'
     li
-      = link_to inline_svg('projects.svg', class: 'fixed-navigation__projects-icon'), '#projects'
+      = link_to inline_svg('projects.svg', class: 'fixed-navigation__icon fixed-navigation__projects-icon'), '#projects'
     li
-      = link_to inline_svg('photos.svg', class: 'fixed-navigation__photos-icon'), '#photos'
+      = link_to inline_svg('photos.svg', class: 'fixed-navigation__icon fixed-navigation__photos-icon'), '#photos'
     li
-      = link_to inline_svg('contacts.svg', class: 'fixed-navigation__contacts-icon'), '#contacts'
+      = link_to inline_svg('contacts.svg', class: 'fixed-navigation__icon fixed-navigation__contacts-icon'), '#contacts'
 
 .tab.tab_about-color
   .tab__content
