--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -24,8 +24,8 @@ header.header.header_shadowed
         input.search-form__input type="text" name='search-form__text'
       - if admin?
         = link_to inline_svg('add.svg', class: 'navigation__add-icon'), new_post_path
-        - unless @post.nil?
-          = link_to 'Edit', edit_post_path(@post)
+        - if params[:action] == "show"
+          = link_to inline_svg('edit_white.svg', class: 'navigation__icon'), edit_post_path(@post)
           
   .header__right-side.header_right-side_uppercase
     - if user_signed_in?
