Trying to fix problem with highlight styles

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,5 +1,5 @@
 @import 'blog/variables'
 @import 'blog/**/*'
-@import 'atom-one-dark.css'
+@import 'atom-one-dark'
 @import 'about/variables'
 @import 'about/**/*'
