--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -14,6 +14,8 @@
 
   = f.text_field :author, class: 'text-input', placeholder: 'Author'
 
+  = f.text_field :tags, class: 'text-input', placeholder: 'Tags'
+
   = f.text_field :link, class: 'text-input', placeholder: 'Link'
 
   = f.text_field :summary, class: 'textarea-input', placeholder: 'A post or the summary of an article'
