--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -1,5 +1,5 @@
 .book-show
-  .book-info
+  .book-info.book-info_flex-centered
   
     = image_tag @book.book_picture_url, class: 'book-info__picture'
     button.button.button_fs20.button_h40
@@ -18,10 +18,12 @@
     /   | , 
     /   = @book.total_pages
 
-    .book-info__review
-      = t('.review')
+    .book-info
+      h4
+        = t('.review')
       = @book.review
-      
-    .book-info__summary
-      = t('.summary')
-      = raw @book.summary
+
+      details
+        summary
+          = t('.summary')
+        = raw @book.summary
