--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -11,6 +11,9 @@
     = raw @post.css
     = raw @post.text
     = javascript_tag @post.javascript
+    
+    .comments
+      
 
 / = link_to 'Edit |', edit_post_path(@post)
 / = link_to 'Back', posts_path
