[37] Add commenting function

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -31,4 +31,4 @@
             = inline_svg('dislike.svg', class: 'dislike-icon')
             = post.dislikes.count
         .post-footer__comment-button
-          = link_to t('.comment_link')
+          = link_to t('.comment_link'), post_path(post, anchor: 'comments')
