--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -11,9 +11,28 @@
     = raw @post.css
     = raw @post.text
     = javascript_tag @post.javascript
-    
-    .comments
-      
 
-/ = link_to 'Edit |', edit_post_path(@post)
-/ = link_to 'Back', posts_path
+    h2#comments Комментарии
+    - if user_signed_in?
+      
+      = form_for :comment, url: comments_path, method: :post, html: {class: 'comments-form'} do |f|
+        = hidden_field_tag 'comment[resource_type]', params['controller']
+        = hidden_field_tag 'comment[resource_id]', @post.id
+        = hidden_field_tag 'comment[user_id]', current_user.id
+        = f.hidden_field :answer, value: "0"
+        = f.text_area :message, class: 'textarea-input comments-form__input', placeholder: t('.write_comment')
+        = f.submit t('.send'), class: 'button comments-form__button'
+
+    .comments
+      - if @post.comments.count == 0
+        = t('.no_comments')
+      - else
+        - @post.comments.each do |comment|
+          .comment
+            .comment__message
+              = comment.message
+            .comment-info
+              .comment-info__date
+                = comment.created_at.strftime("%d.%m.%Y %H:%M")
+              .comment-info__author
+                = User.find(comment.user_id).name
