[32] Add fading animation to alerts

--- a/app/assets/stylesheets/blog/popup/popup.sass
+++ b/app/assets/stylesheets/blog/popup/popup.sass
@@ -7,3 +7,12 @@
   background-color: green
   text-align: center
   line-height: 60px
+  animation-name: fade
+  animation-duration: 5s
+  animation-delay: 1s
+  animation-fill-mode: forwards
+
+@keyframes fade
+  to
+    opacity: 0
+    visibility: hidden
