Add close on click to alerts

--- a/app/assets/stylesheets/blog/popup/popup.sass
+++ b/app/assets/stylesheets/blog/popup/popup.sass
@@ -11,6 +11,10 @@
   animation-duration: 5s
   animation-delay: 1s
   animation-fill-mode: forwards
+  cursor: pointer
+
+.popup:hover
+  animation-play-state: paused
 
 @keyframes fade
   to
